fix carousel indicator overlap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,6 +37,10 @@
   content: url("/carousel-previous.svg") !important;
 }
 
+.control-dots {
+  bottom: -12px !important;
+}
+
 .control-dots > .dot {
   background-color: #51bea7 !important;
   opacity: 50% !important;
